--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: airbnb_page
-description: "A new Flutter project."
+description: "A new Flutter project featuring an airbnb-style home rental ad page."
 publish_to: 'none'
 version: 0.1.0
 
@@ -18,4 +18,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/home_location.jpg
+    - assets/images/
